syntax = "proto3";

package auth_service.pkb.pb;

option go_package = "auth_service/pkg/pb";

import "buf/validate/validate.proto";

message Account {
  string id = 1;
  string username = 2 [(buf.validate.field).string.min_len = 1];
  string password = 3 [(buf.validate.field).string.min_len = 1];
  string role = 4 [(buf.validate.field).string.in = "seller", (buf.validate.field).string.in = "buyer"];
}

message LoginRequest {
  string username = 1 [(buf.validate.field).string.min_len = 1];
  string password = 2 [(buf.validate.field).string.min_len = 1];
  string role = 3 [(buf.validate.field).string.in = "seller", (buf.validate.field).string.in = "buyer"];
}

message RegisterRequest {
  string username = 1 [(buf.validate.field).string.min_len = 1];
  string password = 2 [(buf.validate.field).string.min_len = 1];
  string role = 3 [(buf.validate.field).string.in = "seller", (buf.validate.field).string.in = "buyer"];
}

message LoginResponse {
  string message = 1;
  string access_token = 2;
  bool success = 3;
}

message RegisterResponse {
  string message = 1;
  bool success = 2;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}



